# pico-game-of-light

./: Cargo.toml  README.md
.cargo/: config.toml
arduino-game-of-light/: platformio.ini
arduino-game-of-light/include/: gol.h
arduino-game-of-light/test/test_desktop/: game_of_life.cpp
src/: game_grid.rs  ledstrip_effect.rs  main.rs  ws2812.rs  ws2812_pio.rs
